fixtures/frontend/milestone-2/valid/source-option-imported-binding-match/aivi/network.aivi
value http : Text = "http"
value socket : Text = "socket"
value mailbox : Text = "mailbox"

type Request A = A
type Channel A B = {
    left: A
    right: B
}

export http
export socket
export Request
export Channel
