fixtures/frontend/milestone-2/invalid/equality-missing-eq-instance/main.aivi
value left = Map { "id": 1 }
value right = Map { "id": 1 }
value same:Bool = left == right
